--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(todo VERSION 0.1.0 LANGUAGES C CXX)
 
-add_executable(todo main.cpp)
+add_executable(todo src/main.cpp)
 
